syntax = "proto3";

// Data model
message Repo {
    string repo_id = 1;
    string bucket_name = 2;
    int64 creation_date = 3;
    string default_branch = 4;
    float partial_commit_ratio = 5;
}

message Block {
    string address = 1;
    int64 size = 2;
}

message Object {
    repeated Block blocks = 1;
    string checksum = 2; // a UUID identifying the object
    map<string, string> metadata = 3;
    int64 size = 4;
}

message ObjectDedup {
    bytes dedupId = 1; // used as ETag in S3
    string objectID = 2;
}

message Root {
    int64 timestamp = 1;
    int64 size = 2;
}
message Entry {
    string name = 1;
    string address = 2; // hash of either Object or Entry prefix if tree
    enum Type {
        TREE = 0;
        OBJECT = 1;
    }
    Type type = 3;
    int64 timestamp = 4;
    int64 size = 5; // size, checksum are denormalized here for quick listing
    string checksum = 6; // used as ETag in S3
}

message WorkspaceEntry {
    string path = 1;
    Entry entry = 2;
    bool tombstone = 3;
}

message Commit {
    string address = 1;
    string tree = 2;
    repeated string parents = 3;
    string committer = 4;
    string message = 5;
    int64 timestamp = 6;
    map<string, string> metadata = 7;
}

message Branch {
    string name = 1;
    string commit = 2;
    string commit_root = 3; // de-normalization to save a round trip
    string workspace_root = 4;
}

message MultipartUpload {
    string id = 1;
    string path = 2;
    int64 timestamp = 3;
}

message MultipartUploadPart {
    repeated Block blocks = 1;
    string checksum = 2; // used as ETag in S3
    int64 timestamp = 3;
    int64 size = 4;
}

message MultipartUploadPartRequest {
    int32 partNumber = 1;
    string etag = 2;
}

